--- a/i386/stage2/davis/progs/Makefile
+++ b/i386/stage2/davis/progs/Makefile
@@ -27,7 +27,7 @@ L_FLAGS = $(L_FLAGS_0) $(L_FLAGS_1)
 .PHONY: default all clean test stripdebug stripall
 
 
-default: buffer_overflow shell testy1 testya1.o testya2.o testya3.o testya4.o buffer_overflow2 testya5.o buffer_overflow3
+default: buffer_overflow shell testy testy1 testya1.o testya2.o testya3.o testya4.o buffer_overflow2 testya5.o buffer_overflow3
 
 all: default
 
@@ -40,6 +40,9 @@ HEADERS = $(wildcard *.h)
 	$(CC)  $(C_FLAGS) -c $< -o $@
 
 .PRECIOUS: buffer_overflow buffer_overflow2 $(OBJECTS)
+
+testy: testy.o
+	$(CC) $(L_FLAGS) -o $@ $<
 
 buffer_overflow3: buffer_overflow3.o
 	$(CC) $(L_FLAGS) -o $@ $<
